--- a/task11/style.css
+++ b/task11/style.css
@@ -1,23 +1,26 @@
 #header{
 background:darkred;
-width:715px;
-height:100px;
+    width:715px;
+    height:100px;
 }
 #menu{
 background:oldlace;
-width:190px;
-height:300px;
+    width:190px;
+    height:300px;
 }
 #content{
-background:oldlace;
-width:525px;
-height:300px;
-position:absolute;
-left:190px;
-top:100px;
+    background:oldlace;
+    width:525px;
+    height:300px;
+    position:absolute;
+    left:190px;
+    top:100px;
 }
 #footer{
-background:darkred;
-width:715px;
-height:30px;
+    background:darkred;
+    width:715px;
+    height:30px;
+}
+body{
+    margin:0px;
 }
